# fastapi-auth-service

./: Dockerfile  LICENSE  README.md  backend.dockerfile  celeryworker.dockerfile  docker-compose.yml  dramatiqworker.dockerfile  pyproject.toml
application/: asgi.py  utils.py  worker.py
application/api/: dependencies.py
application/api/routers/: __init__.py  auth.py  utils.py
application/core/: celery_app.py  config.py  dramatiq_worker.py  security.py
application/crud/: user.py
application/database/: base.py  models.py  redis_client.py  session.py
application/schemas/: __init__.py  token.py  user.py
docker/: runworker.sh
migrations/: env.py
migrations/versions/: 381808b14675_init.py
